    command-line parsing strictness introduced in 1.17.17. Closes: #764965
  * Create pidfiles even when start-stop-daemon is not asked to background
    the process itself. Although a bit of a dubious usage, because any error
    before executing the program will not be properly reported to the caller.
    Regression introduced in dpkg 1.17.14. Closes: #765110

  [ Updated programs translations ]
  * Italian (Milo Casagrande): Closes: #765748
  * Turkish (Mert Dirik). Closes: #764942
  * Simplified Chinese (lumin). Closes: #765693

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sun, 12 Oct 2014 16:42:00 +0200

dpkg (1.17.18) unstable; urgency=low

  [ Guillem Jover ]
  * Handle empty minimum versions when initializing dependency versions,
    as the code is mapping the minimum version 0 to '' to avoid outputting
    useless versions. Regression introduced in dpkg 1.17.17. Closes: #764929

  [ Updated programs translations ]
  * Catalan (Guillem Jover).

  [ Updated dselect translations ]
  * Catalan (Guillem Jover).
  * German (Sven Joachim).

 -- Guillem Jover <guillem@debian.org>  Sun, 12 Oct 2014 15:47:44 +0200

dpkg (1.17.17) unstable; urgency=low

  [ Guillem Jover ]
  * Add dpkg-vendor, Dpkg/File.pm and Dpkg/Util.pm to the list of files with
    translatable strings, so that they can be translated.
  * Fix some typos for versioned and mentioned in comments and changelogs.
  * Mark for translation and unify "rm cleanup" string in dpkg.
  * Mark for translation and improve dselect method handling error messages.
  * Defer trigger processing if the package does not fulfill dependencies.
    Closes: #671711
  * Do not write to the database when changing selections with --dry-run.
    Closes: #764673
  * Add missing imports from Dpkg::BuildProfiles in dpkg-genchanges.
    Regression introduced in dpkg 1.17.14. Closes: #764216