@@ -7,6 +7,7 @@ dpkg (1.17.19) UNRELEASED; urgency=low
     the process itself. Although a bit of a dubious usage, because any error
     before executing the program will not be properly reported to the caller.
     Regression introduced in dpkg 1.17.14. Closes: #765110
+  * Add new --remove-pidfile option to start-stop-daemon.
 
   [ Updated programs translations ]
   * Italian (Milo Casagrande): Closes: #765748
